# protegon-demos

./: CMakeLists.txt
brackeys_jam_2024/: CMakeLists.txt
brackeys_jam_2024/resources/data/: houses.json  levels.json
brackeys_jam_2024/resources/ui/: tornado1.aseprite
brackeys_jam_2024/src/: application.cpp
brackeys_jam_2025_1/: CMakeLists.txt
brackeys_jam_2025_1/resources/json/: car.json  textures.json
brackeys_jam_2025_1/src/: application.cpp
collision/: CMakeLists.txt
collision/src/: application.cpp
cozy_winter_jam_2025/: CMakeLists.txt
cozy_winter_jam_2025/src/: application.cpp
gmtk_jam_2022/: CMakeLists.txt
gmtk_jam_2022/src/: Application.cpp  application.cpp
gmtk_jam_2023/: CMakeLists.txt
gmtk_jam_2023/src/: application.cpp
gmtk_jam_2024/: CMakeLists.txt
gmtk_jam_2024/scripts/: build-emscripten.sh
gmtk_jam_2024/src/: application.cpp  main.cpp
graph/: CMakeLists.txt
graph/src/: application.cpp
paint/: CMakeLists.txt
paint/src/: application.cpp
path_finding/: CMakeLists.txt
pixel_jam_2024/: CMakeLists.txt
pixel_jam_2024/src/: application.cpp  application2.cpp
resolution_jam_2024/: CMakeLists.txt
resolution_jam_2024/src/: application.cpp
sandbox/: CMakeLists.txt
sandbox/src/: application.cpp
scream_jam_2024/: CMakeLists.txt
scream_jam_2024/src/: application.cpp
simulink/: CMakeLists.txt
simulink/src/: application.cpp
template_project/: CMakeLists.txt
template_project/src/: application.cpp
tower_defense/: CMakeLists.txt
wintermelon_jam_2024/: CMakeLists.txt
wintermelon_jam_2024/src/: application.cpp
(+8 files in other folders)
