cmake_minimum_required(VERSION 3.20)

project(protegon-demos)

add_subdirectory(../protegon binary_dir)

add_subdirectory(collision)
add_subdirectory(gmtk_jam_2022)
add_subdirectory(gmtk_jam_2023)
add_subdirectory(paint)
add_subdirectory(path_finding)
add_subdirectory(sandbox)
add_subdirectory(tower_defense)
